config/openshift/base/webhook.yaml
# Copyright 2021 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-operator-webhook
  labels:
    version: v0.79.0
    operator.tekton.dev/release: v0.79.0
spec:
  replicas: 1
  selector:
    matchLabels:
      name: tekton-operator-webhook
  template:
    metadata:
      labels:
        name: tekton-operator-webhook
        app: tekton-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: openshift-pipelines-operator
      containers:
      - name: tekton-operator-webhook
        image: ko://github.com/tektoncd/operator/cmd/openshift/webhook
        ports:
        - name: https-webhook
          containerPort: 8443
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - "ALL"
          seccompProfile:
            type: RuntimeDefault
