config/openshift/base/500-webhooks.yaml
# Copyright 2021 The Tekton Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation.webhook.operator.tekton.dev
webhooks:
  - clientConfig:
      service:
        name: tekton-operator-webhook
        namespace: openshift-operators
    name: validation.webhook.operator.tekton.dev

---

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.operator.tekton.dev
webhooks:
- clientConfig:
    service:
      name: tekton-operator-webhook
      namespace: openshift-operators
  name: webhook.operator.tekton.dev

---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: config.webhook.operator.tekton.dev
webhooks:
- clientConfig:
    service:
      name: tekton-operator-webhook
      namespace: openshift-operators
  name: config.webhook.operator.tekton.dev
  # Only watch configmap from openshift-operators
  # The other way would be to watch object with operator.tekton.dev/release but it's broader
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: In
      values: ["openshift-operators"]
